Simplify the SCMAccessor interface by removing naive helper functions and integrating Revision with CommitEntry. Pass on the changes to the SVN and Git accessors.